Kiwi Fruit Started Rotating

--- a/custom-style.css
+++ b/custom-style.css
@@ -39,3 +39,15 @@
     width:10%; 
     margin-top:-10px;
 }
+
+
+/* animation */
+
+.imageKiwi {
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
