Style updates on fonts

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,12 @@
 /*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
 
 /*===== VARIABLES CSS =====*/
+.header__font{
+    font-family: 'Pattaya', sans-serif !important;
+}
+
 :root{
     --header-height: 3rem;
     --font-semi: 600;
@@ -16,8 +21,7 @@
 /*===== Fuente y tipografia =====*/
 :root{
     --body-font: 'Poppins', sans-serif;
-
-    --big-font-size: 2rem;
+    --big-font-size: 3.4rem;
     --h2-font-size: 1.25rem;
     --normal-font-size: 0.938rem;
 
