--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,10 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
+  background-image: url("../../assets/img/bg-pattern.svg");
+  background-size: auto;
+  background-repeat: repeat;
+  background-position: center;
 }
 
 h1, h2, p {
@@ -316,6 +320,7 @@ img {
   margin-bottom: var(--mb-4);
   border-radius: .5rem;
   box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+  background: #fff;
 }
 
 .skills__icon {
@@ -392,9 +397,11 @@ img {
   font-weight: var(--font-semi);
   padding: 1rem;
   border-radius: .5rem;
-  border: 1.5px solid var(--second-color);
+  border: 1.5px solid var(--first-color);
   outline: none;
   margin-bottom: var(--mb-4);
+  background: #0000;
+  color: #0279f1;
 }
 
 .contact__button {
@@ -558,16 +565,16 @@ img {
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #0000;
   margin: auto;
-  padding: 20px;
+  padding: 0;
   border: 0px solid #888;
   width: 90%;
 }
 
 /* The Close Button */
 .close {
-  color: #ff3939;
+  color: #ff3e3e;
   line-height: 0.8;
   height: 10px;
   font-size: 28px;
@@ -579,4 +586,8 @@ img {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.video-container{
+  margin-top: 1rem;
 }
