Portfolio Link Attached

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -542,28 +542,38 @@ img {
   justify-content: center;
 }
 
-
 /* The Modal (background) */
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
-.modal__header{
+.modal__header {
   display: flex;
   justify-content: flex-end;
 }
 
 /* Modal Content */
+
 .modal-content {
   background-color: #0000;
   margin: auto;
@@ -573,6 +583,7 @@ img {
 }
 
 /* The Close Button */
+
 .close {
   color: #ff3e3e;
   line-height: 0.8;
@@ -581,13 +592,22 @@ img {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
 }
 
-.video-container{
+.video-container {
   margin-top: 1rem;
+}
+
+.view-button-portfolio {
+  background-color: #0279f1;
+  color: #fff;
+  padding: 0.25rem;
+  font-style: italic;
+  padding-right: 1.7rem;
+  padding-left: 1.5rem;
+  border-radius: .4rem;
 }
